# Firefly

./: .gitignore  README.md  app.py  main.py  pyproject.toml
example_generations/k12/: generated_code.py
example_generations/mental_health/: generated_code.py
example_generations/music/: generated_code.py
example_generations/nowin/: generated_code.py
example_generations/rpg_game/: generated_code.py
example_generations/ship_challenge/: generated_code.py
generated_docs/: docs.md  docs_index.md
generated_docs/agent/: docs.md
generated_docs/agent/docs/: docs.md
generated_docs/agent/docs-lsp/: docs.md
generated_docs/docs-test/: docs.md
generated_docs/lsp/: docs.md
generated_docs/prompts/: docs.md
generated_docs/static/: docs.md
generated_docs/static/css/: docs.md
generated_docs/tests/: docs.md
generated_docs/tools/: docs.md
src/: __init__.py  main.py
src/agent/: azure_example.py  basic_docmentation.py  docs.md  format_docs.py  formatted_docs.md  generate_code.py  generate_code_from_context.py  generate_documentation.py  generated.md  generated_solution.py  get_code_running.py  mental_health.py  mental_health2.py  rag_mh.py
src/agent/docs/: docs_index.md
src/agent/docs-lsp/: docs.md
src/docs-test/: docs.md
src/lsp/: __init__.py  interactions.py
src/parser/: .#parser.py  parser.py
src/prompts/: document_code.py  format_docs.py  generate_code.py  generate_documentation.py  testwrap.py
src/tools/: lsp.py
static/css/: styles.css
templates/: about.html  error.html  index.html  result.html
tests/: test.py
(+49 files in other folders)
