[project]
name = "hackiiit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "faiss-cpu>=1.10.0",
    "flask>=3.1.0",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-openai>=0.3.8",
    "moya-ai",
    "openai>=1.66.3",
    "sentence-transformers>=3.4.1",
    "multilspy>=0.0.14",
    "textual>=2.1.2",
]

[tool.uv.sources]
moya-ai = { git = "https://github.com/vishesh312/moya", branch = "tool-call-fix" }
